# PromiseOut-rust

./: Cargo.toml  LICENSE  README.md
src/: channel.rs  lib.rs  pair.rs  poly.rs  promise_out.rs
tests/: promise_out_test.rs
