[package]
name = "promise_out"
version = "0.1.0"
edition = "2021"
description = "promiseOut version for rust"
authors = ["waterbang <water_bang@163.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"